refactor(table): modernize table views with Java 21 patterns
- Add self field pattern using getBoundComponent() for Composite classes
- Use fluent API method chaining for improved readability
- Convert immutable DTOs to Java records (Person, Service)
- Use text blocks for multi-line strings
- Apply pattern matching, lambda expressions, and stream API